# Dependencies

EGSnrc2017/: README.md
EGSnrc2017/HEN_HOUSE/: WinBuild.txt  generateConfig.bat
EGSnrc2017/HEN_HOUSE/egs++/: Makefile  config-debug.mak  config.mak  egs_application.cpp  egs_functions.cpp  egs_functions.h
EGSnrc2017/HEN_HOUSE/iaea_phsp/: iaea_phsp.cpp  iaea_phsp.h
PINIT/: .gitignore  MinGWx64.bat  PInterface.f  README.md  gFortran.sh  penelope.f
dcmtk-3.6.1/: CMakeLists.txt  README.md
dcmtk-3.6.1/CMake/: dcmtkPrepare.cmake
dcmtk-3.6.1/dcmdata/: CMakeLists.txt
hdf5-1.8.19/: CMakeFilters.cmake  CMakeLists.txt  README.md
hdf5-1.8.19/src/: CMakeLists.txt  H5.c  H5T.c
mathgl-2.3.2/: CMakeLists.txt  README.md
mathgl-2.3.2/examples/: fltk_example.cpp  full_test.cpp  glut_example.cpp  qt_example.cpp  wnd_samples.cpp
mathgl-2.3.2/src/: CMakeLists.txt  canvas.cpp  data_png.cpp  opengl.cpp  prc.cpp
mathgl-2.3.2/udav/: prop_dlg.cpp  qmglsyntax.cpp  style_dlg.cpp
mathgl-2.3.2/utils/: mglconv.cpp
mathgl-2.3.2/widgets/: glut.cpp  wx.cpp
matio-1.5.10/: CMakeLists.txt  Makefile.in  NEWS  README.md  aclocal.m4  configure
matio-1.5.10/documentation/: Makefile.in
matio-1.5.10/src/: Makefile.in
matio-1.5.10/test/: Makefile.in  package.m4
matio-1.5.10/visual_studio/libmatio/: libmatio.vcxproj
matio-1.5.10/visual_studio/matdump/: matdump.vcxproj
matio-1.5.10/visual_studio/test_mat/: test_mat.vcxproj
szip-2.1.1/: CMakeLists.txt  README.md
szip-2.1.1/PaxHeader/: HISTORY.txt
szip-2.1.1/src/: CMakeLists.txt
zlib-1.2.11/: CMakeLists.txt  README.md
(+25 files in other folders)
